--- a/GSTINVOICE/MDIContainer.resx
+++ b/GSTINVOICE/MDIContainer.resx
@@ -120,4 +120,81 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAIAlAACAJQAAAAAAAAAA
+        AABJAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kC
+        Cf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kC
+        Cf9JAgn/SQIJ/0kCCf/CFRr/wxQa/8MUG//FExv/xhIb/8YSG//HEhv/xxIb/8gRG//IERv/yREb/8oQ
+        G//KEBv/yxAb/8sQG//LDxz/zA8c/8sPHP/LDxz/zA8c/8wPHP/NDxz/zA8c/8wPHP/MDxz/zA8c/8wP
+        HP/MDxz/zA8c/8wPHP9JAgn/SQIJ/8MUGv/DFBv/xBMb/8UTG//GEhv/xxIb/8cSG//IERv/yREb/8kR
+        G//KEBv/yxAb/8sPHP/LDxz/zA8c/8wPHP/NDxz/zA8c/8wPHP/NDxz/zQ8c/84OHP/NDxz/zQ8c/84O
+        HP/NDxz/zQ8c/80PHP/NDxz/zQ8c/0kCCf9JAgn/xBQb/8QTG//GEhv/xhIb/8cSG//HEhv/yBEb/8kR
+        G//KEBv/yxAb/8sQG//LDxz/yw8c/8wPHP/MDxz/zQ8c/84OHP/ODhz/zg4c/84OHP/ODhz/zg4c/84O
+        HP/ODhz/zg4c/84OHP/ODhz/zg4c/84OHP/ODhz/SQIJ/0kCCf/EExv/xhIb/8YSG//HEhv/xxIb/8gR
+        G//JERv/yhAb/8sQG//LEBv/yw8c/8wPHP/MDxz/zQ8c/84OHP/ODhz/zg4c/84OHP/ODhz/zg4c/88N
+        HP/PDRz/zw0c/88NHP/PDRz/zw0c/84OHP/ODhz/zw0c/84OHP9JAgn/SQIJ/8UTG//GEhv/xxIb/8cS
+        G//IERv/yREb/8oQG//LEBv/yxAb/8wPHP/MDxz/zQ8c/80PHP/ODhz/zg4c/84OHP/PDRz/zw0c/88N
+        HP/PDRz/0A0c/9ANHP/QDRz/0A0c/9ANHP/QDRz/0A0c/88NHP/PDRz/zw0c/0kCCf9JAgn/xhIb/8cS
+        G//HEhv/yBEb/8kRG//KEBv/yxAb/8sPHP/LDxz/zA8c/80PHP/NDxz/zg4c/84OHP/ODhz/zg4c/9AN
+        HP/QDRz/0A0c/9ANHP/RDBz/0A0c/9ANHP/RDBz/0A0c/9ANHP/QDRz/0A0c/9ANHP/QDRz/SQIJ/0kC
+        Cf/GEhv/xxIb/8gRG//JERv/yhAb/8oQG//LDxz/zA8c/8wPHP/NDxz/zg4c/84OHP/ODhz/zg4c/88N
+        HP/QDRz/0A0c/9ANHP/QDRz/0Qwc/9EMHP/SDBz/0gwc/9EMHP/RDBz/0gwc/9EMHP/RDBz/0Qwc/9EM
+        HP9JAgn/SQIJ/8cSG//IERv/yREb/8oQG//LEBv/yxAb/8wPHP/NDxz/zQ8c/84OHP/ODhz/zg4c/88N
+        HP/PDRz/0A0c/9EMHP/RDBz/0Qwc/9EMHP/SDBz/0gwc/9IMHP/SDBz/0gwc/9IMHP/SDBz/0gwc/9IM
+        HP/SDBz/0gwc/0kCCf9JAgn/yBEb/8kRG//KEBv/yxAb/8sPHP/MDxz/zA8c/80PHP/ODhz/zg4c/88N
+        HP/PDRz/0A0c/9ANHP/QDRz/0Qwc/9EMHP/SDBz/0gwc/9IMHP/SDBz/0gwc/9IMHP/SDBz/0gwc/9IM
+        HP/SDBz/0gwc/9IMHP/SDBz/SQIJ/0kCCf/IERv/yREb/8oQG//LEBv/yw8c/8wPHP/NDxz/zg4c/84O
+        HP/ODhz/zw0c/9ANHP/QDRz/0Qwc/9EMHP/SDBz/0gwc/9IMHP/SDBz/0wsd/9IMHP/SDBz/0wsd/9ML
+        Hf/TCx3/0wsd/9MLHf/SDBz/0gwc/9MLHf9JAgn/SQIJ/8gRG//JERv/yxAb/8sPHP/TRk3/4IqN/+ek
+        p//npKf/3nt//9MuN//QDRz/0A0c/9EMHP/da3D/6aSn/+mkp//mmJv/2EVN/9IMHP/TCx3/0wsd/9ML
+        Hf/ZRU3/6aSn/95qcP/TCx3/0wsd/9MLHf/TCx3/0wsd/0kCCf9JAgn/yREb/8oQG//LDxz/34qN//7+
+        /v/+/v7/89TV//Xf4P/+/v7//v7+/9ANHP/ULTf/+erq//7+/v/56ur/9NTV//v09P/+/v7/5ImO/9QL
+        Hf/UCx3/1Asd/99qcP/+/v7/6aSn/9QLHf/UCx3/1Asd/9QLHf/UCx3/SQIJ/0kCCf/JERv/yxAb/9x7
+        f//+/v7/7L2//9EuN//ODhz/zg4c/+ekp//+/v7/0Qwc/9EMHP/rsbP/2EVN/9IMHP/TCx3/1Asd//TU
+        1f/89PT/1Qod/9QLHf/UCx3/4Gpw//7+/v/qpKf/1Qod/9QLHf/UCx3/1Asd/9QLHf9JAgn/SQIJ/8oQ
+        G//LEBv/9d/g//v09P/RLjf/zg4c/84OHP/PDRz/6KSn//7+/v/SDBz/0gwc/9IMHP/SDBz/0wsd/9QL
+        Hf/UCx3/8cnK//7+/v/aRE3/1Qod/9UKHf/ganD//v7+/+qkp//VCh3/1Qod/9UKHf/VCh3/1Qod/0kC
+        Cf9JAgn/yxAb/8sPHP/+/v7/8tTV/84OHP/ODhz/22tw/+ikp//z1NX//v7+/9IMHP/SDBz/0gwc/9IM
+        HP/ien//7LGz//nq6v/+/v7/99/g/9UKHf/VCh3/1Qod/+BqcP/+/v7/6qSn/9UKHf/VCh3/1Qod/9UK
+        Hf/VCh3/SQIJ/0kCCf/LEBv/yw8c//7+/v/y1NX/zg4c/84OHP/hio3/89TV//PU1f/z1NX/0gwc/9IM
+        HP/ea3D/+/T0//7+/v/+/v7/99/g/+qkp//YLDj/1Qod/9UKHf/VCh3/4Gpw//7+/v/qpKf/1Qod/9UK
+        Hf/VCh3/1Qod/9UKHf9JAgn/SQIJ/8sQG//MDxz/+/T0//Xf4P/ODhz/zw0c/9ANHP/RDBz/0Qwc/9IM
+        HP/SDBz/0wsd//v09P/79PT/5ImO/9gsOP/VCh3/1Qod/9UKHf/VCh3/1Qod/9UKHf/ganD//v7+/+qk
+        p//WCR3/1Qod/9UKHf/VCh3/1Qod/0kCCf9JAgn/yw8c/8wPHP/svb///v7+/9RGTf/PDRz/0A0c/9EM
+        HP/SDBz/0gwc/9IMHP/TCx3//v7+//TU1f/UCx3/1Qod/9UKHf/VCh3/2Cw4/9YJHf/WCR3/1gkd/+Bq
+        cP/+/v7/6qSn/9YJHf/WCR3/1gkd/9YJHf/VCh3/SQIJ/0kCCf/LDxz/zA8c/9RGTf/79PT/+Orq/+KK
+        jf/ca3D/3Wtw/+69v//uvb//0gwc/9QLHf/vvb//+/T0/+WJjv/ganD/4Gpw/++9v//yycr/2Sw4/+Bq
+        cP/ganD/6Jeb//7+/v/wvb//4Gpw/+BqcP/bRE3/1gkd/9YJHf9JAgn/SQIJ/8sPHP/NDxz/zQ8c/9ha
+        X//wycr//v7+//7+/v/+/v7/9t/g/+B7f//SDBz/1Asd/9ctOP/vvb///v7+//7+/v/+/v7/+erq/+aJ
+        jv/ganD//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+/+qkp//WCR3/1gkd/0kCCf9JAgn/yw8c/8wP
+        HP/NDxz/zg4c/88NHP/PDRz/1C03/9IMHP/SDBz/0gwc/9MLHf/UCx3/1Asd/9QLHf/VCh3/2Cw4/9UK
+        Hf/VCh3/1gkd/9YJHf/WCR3/1gkd/9YJHf/WCR3/1gkd/9YJHf/XCR3/1gkd/9YJHf/WCR3/SQIJ/0kC
+        Cf/LDxz/zA8c/84OHP/ODhz/zw0c/88NHP/RDBz/0gwc/9IMHP/SDBz/0wsd/9QLHf/UCx3/1Asd/9UK
+        Hf/VCh3/1Qod/9YJHf/WCR3/1gkd/9YJHf/WCR3/1wkd/9cJHf/XCR3/1wkd/9cJHf/XCR3/1gkd/9YJ
+        Hf9JAgn/SQIJ/8sPHP/NDxz/zg4c/84OHP/PDRz/0A0c/9EMHP/RDBz/0gwc/9IMHP/TCx3/1Asd/9QL
+        Hf/VCh3/1Qod/9UKHf/VCh3/1gkd/9YJHf/WCR3/1wkd/9cJHf/XCR3/1wkd/9cJHf/XCR3/1wkd/9cJ
+        Hf/WCR3/1gkd/0kCCf9JAgn/yw8c/80PHP/NDxz/zg4c/88NHP/QDRz/0A0c/9EMHP/SDBz/0gwc/9IM
+        HP/TCx3/1Asd/9UKHf/VCh3/1Qod/9UKHf/WCR3/1gkd/9YJHf/XCR3/1wkd/9cJHf/XCR3/1wkd/9YJ
+        Hf/WCR3/1gkd/9YJHf/WCR3/SQIJ/0kCCf/MDxz/zQ8c/80PHP/ODhz/zw0c/88NHP/QDRz/0gwc/9IM
+        HP/SDBz/0gwc/9MLHf/UCx3/1Qod/9UKHf/VCh3/1Qod/9UKHf/WCR3/1gkd/9cJHf/XCR3/1wkd/9cJ
+        Hf/XCR3/1gkd/9YJHf/WCR3/1gkd/9YJHf9JAgn/SQIJ/8sPHP/NDxz/zQ8c/84OHP/PDRz/zw0c/9EM
+        HP/RDBz/0gwc/9IMHP/TCx3/0wsd/9QLHf/VCh3/1Qod/9UKHf/VCh3/1Qod/9YJHf/WCR3/1gkd/9cJ
+        Hf/XCR3/1wkd/9YJHf/WCR3/1gkd/9YJHf/WCR3/1gkd/0kCCf9JAgn/yw8c/8wPHP/ODhz/zg4c/84O
+        HP/QDRz/0A0c/9EMHP/SDBz/0gwc/9IMHP/TCx3/1Asd/9QLHf/VCh3/1Qod/9UKHf/VCh3/1gkd/9YJ
+        Hf/WCR3/1wkd/9YJHf/WCR3/1gkd/9YJHf/WCR3/1gkd/9YJHf/VCh3/SQIJ/0kCCf/LDxz/zA8c/80P
+        HP/ODhz/zg4c/9ANHP/QDRz/0Qwc/9IMHP/SDBz/0gwc/9MLHf/UCx3/1Asd/9UKHf/VCh3/1Qod/9UK
+        Hf/VCh3/1gkd/9YJHf/XCR3/1gkd/9YJHf/WCR3/1gkd/9YJHf/WCR3/1gkd/9UKHf9JAgn/SQIJ/8sP
+        HP/MDxz/zQ8c/84OHP/ODhz/zw0c/88NHP/RDBz/0Qwc/9IMHP/SDBz/0wsd/9MLHf/UCx3/1Asd/9UK
+        Hf/VCh3/1Qod/9UKHf/VCh3/1gkd/9YJHf/WCR3/1gkd/9YJHf/WCR3/1Qod/9YJHf/WCR3/1Qod/0kC
+        Cf9JAgn/yxAb/8wPHP/NDxz/zQ8c/84OHP/PDRz/zw0c/9ANHP/RDBz/0gwc/9IMHP/TCx3/0wsd/9QL
+        Hf/UCx3/1Qod/9UKHf/VCh3/1Qod/9UKHf/VCh3/1gkd/9YJHf/WCR3/1gkd/9YJHf/VCh3/1Qod/9UK
+        Hf/VCh3/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kC
+        Cf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kCCf9JAgn/SQIJ/0kC
+        Cf9JAgn/SQIJ/0kCCf9JAgn/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
